Criado através do Colab

--- a/spark/examples/05-aggregations.ipynb
+++ b/spark/examples/05-aggregations.ipynb
@@ -26,11 +26,11 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "kQUWb3uCp6Xq",
-        "outputId": "19f072cf-b353-46da-afdd-41cb8a980171",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kQUWb3uCp6Xq",
+        "outputId": "19f072cf-b353-46da-afdd-41cb8a980171"
       },
       "execution_count": 1,
       "outputs": [
@@ -68,10 +68,10 @@
       "execution_count": 2,
       "metadata": {
         "id": "uYXeODL0T1fO",
-        "outputId": "a1cefa41-f873-4b55-c744-12ae48c5ec04",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a1cefa41-f873-4b55-c744-12ae48c5ec04"
       },
       "outputs": [
         {
@@ -114,13 +114,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 19,
       "metadata": {
         "id": "GPdtlX5BSI1w",
-        "outputId": "b178ba6f-cb45-4133-b347-302ba50e4ec2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1ce5ebbe-456a-474c-caf2-313360ef1ee0"
       },
       "outputs": [
         {
@@ -201,12 +201,12 @@
       ],
       "metadata": {
         "id": "Aa38HFEQVSM9",
-        "outputId": "1fee5726-2c55-4ca0-be73-a328d8fdb1f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5b16d950-ccd1-4c24-d433-14c5f21735ef"
       },
-      "execution_count": 5,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -240,10 +240,29 @@
         " .show(10, False))"
       ],
       "metadata": {
-        "id": "ZbfHHI_wYJge"
+        "id": "ZbfHHI_wYJge",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "402392b7-29eb-4602-ef84-aa007ddde361"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----------+----------+----------+----------+--------------------------------------------------------------------------------------------+---------------+\n",
+            "|department|sum_salary|avg_salary|min_salary|employees                                                                                   |count_employees|\n",
+            "+----------+----------+----------+----------+--------------------------------------------------------------------------------------------+---------------+\n",
+            "|Sales     |35845     |8961.25   |6660      |[Julie Firrelli, Steve Patterson, Foon Yue Tseng, George Vanauf]                            |4              |\n",
+            "|Accounting|54394     |9065.67   |6627      |[Diane Murphy, Mary Patterson, Jeff Firrelli, William Patterson, Gerard Bondur, Anthony Bow]|6              |\n",
+            "|SCM       |51085     |10217.0   |6949      |[Loui Bondur, Gerard Hernandez, Pamela Castillo, Larry Bott, Barry Jones]                   |5              |\n",
+            "+----------+----------+----------+----------+--------------------------------------------------------------------------------------------+---------------+\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -271,6 +290,234 @@
       ],
       "metadata": {
         "id": "sAB_dzZabf_o"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pyspark.sql.functions import *\n",
+        "\n",
+        "df = (df.withColumn(\"surname\", split(col(\"employee_name\"), \" \").getItem(1))\n",
+        "      .withColumn(\"first_name\", split(col(\"employee_name\"), \" \").getItem(0)))\n",
+        "\n",
+        "df.show()"
+      ],
+      "metadata": {
+        "id": "-aQUM27suePK",
+        "outputId": "8752b586-8234-40b7-ed22-ae95e7b637ab",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----------------+----------+------+---------+---+----------+\n",
+            "|    employee_name|department|salary|  surname| rn|first_name|\n",
+            "+-----------------+----------+------+---------+---+----------+\n",
+            "|    Gerard Bondur|Accounting| 11472|   Bondur|  1|    Gerard|\n",
+            "|      Loui Bondur|       SCM| 10449|   Bondur|  2|      Loui|\n",
+            "|       Larry Bott|       SCM| 11798|     Bott|  1|     Larry|\n",
+            "|      Anthony Bow|Accounting|  6627|      Bow|  1|   Anthony|\n",
+            "|  Pamela Castillo|       SCM| 11303| Castillo|  1|    Pamela|\n",
+            "|   Julie Firrelli|     Sales|  9181| Firrelli|  1|     Julie|\n",
+            "|    Jeff Firrelli|Accounting|  8992| Firrelli|  2|      Jeff|\n",
+            "| Gerard Hernandez|       SCM|  6949|Hernandez|  1|    Gerard|\n",
+            "|  Leslie Jennings|        IT|  8113| Jennings|  1|    Leslie|\n",
+            "|      Barry Jones|       SCM| 10586|    Jones|  1|     Barry|\n",
+            "|     Diane Murphy|Accounting|  8435|   Murphy|  1|     Diane|\n",
+            "|   Mary Patterson|Accounting|  9998|Patterson|  1|      Mary|\n",
+            "|  Steve Patterson|     Sales|  9441|Patterson|  2|     Steve|\n",
+            "|William Patterson|Accounting|  8870|Patterson|  3|   William|\n",
+            "|  Leslie Thompson|        IT|  5186| Thompson|  1|    Leslie|\n",
+            "|    George Vanauf|     Sales| 10563|   Vanauf|  1|    George|\n",
+            "|   Foon Yue Tseng|     Sales|  6660|      Yue|  1|      Foon|\n",
+            "+-----------------+----------+------+---------+---+----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pyspark.sql.window import Window\n",
+        "from pyspark.sql.functions import row_number, desc, asc\n",
+        "\n",
+        "w = Window.partitionBy(\"surname\").orderBy(desc(\"salary\"), asc(\"employee_name\"))\n",
+        "\n",
+        "df = df.withColumn(\"rn\", row_number().over(w))\n",
+        "df.show()"
+      ],
+      "metadata": {
+        "id": "DdKkJ-jsv-sf",
+        "outputId": "469fa3c9-f723-45dd-cd50-a5b5fdeaad57",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----------------+----------+------+---------+---+----------+\n",
+            "|    employee_name|department|salary|  surname| rn|first_name|\n",
+            "+-----------------+----------+------+---------+---+----------+\n",
+            "|    Gerard Bondur|Accounting| 11472|   Bondur|  1|    Gerard|\n",
+            "|      Loui Bondur|       SCM| 10449|   Bondur|  2|      Loui|\n",
+            "|       Larry Bott|       SCM| 11798|     Bott|  1|     Larry|\n",
+            "|      Anthony Bow|Accounting|  6627|      Bow|  1|   Anthony|\n",
+            "|  Pamela Castillo|       SCM| 11303| Castillo|  1|    Pamela|\n",
+            "|   Julie Firrelli|     Sales|  9181| Firrelli|  1|     Julie|\n",
+            "|    Jeff Firrelli|Accounting|  8992| Firrelli|  2|      Jeff|\n",
+            "| Gerard Hernandez|       SCM|  6949|Hernandez|  1|    Gerard|\n",
+            "|  Leslie Jennings|        IT|  8113| Jennings|  1|    Leslie|\n",
+            "|      Barry Jones|       SCM| 10586|    Jones|  1|     Barry|\n",
+            "|     Diane Murphy|Accounting|  8435|   Murphy|  1|     Diane|\n",
+            "|   Mary Patterson|Accounting|  9998|Patterson|  1|      Mary|\n",
+            "|  Steve Patterson|     Sales|  9441|Patterson|  2|     Steve|\n",
+            "|William Patterson|Accounting|  8870|Patterson|  3|   William|\n",
+            "|  Leslie Thompson|        IT|  5186| Thompson|  1|    Leslie|\n",
+            "|    George Vanauf|     Sales| 10563|   Vanauf|  1|    George|\n",
+            "|   Foon Yue Tseng|     Sales|  6660|      Yue|  1|      Foon|\n",
+            "+-----------------+----------+------+---------+---+----------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pyspark.sql.functions import count, max, collect_list, array_sort\n",
+        "\n",
+        "agg = (\n",
+        "    df.groupBy(\"surname\")\n",
+        "      .agg(\n",
+        "          count(\"*\").alias(\"count_employees\"),\n",
+        "          max(\"salary\").alias(\"highest_salary\"),\n",
+        "          array_sort(collect_list(\"first_name\")).alias(\"array_with_all_the_first_names\")\n",
+        "      )\n",
+        ")\n",
+        "agg.show()"
+      ],
+      "metadata": {
+        "id": "5PcCnNUoxfhb",
+        "outputId": "74d7aa9c-26be-40dc-a2c5-dfcb7f40b9a4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---------+---------------+--------------+------------------------------+\n",
+            "|  surname|count_employees|highest_salary|array_with_all_the_first_names|\n",
+            "+---------+---------------+--------------+------------------------------+\n",
+            "|      Bow|              1|          6627|                     [Anthony]|\n",
+            "|    Jones|              1|         10586|                       [Barry]|\n",
+            "|   Bondur|              2|         11472|                [Gerard, Loui]|\n",
+            "|   Murphy|              1|          8435|                       [Diane]|\n",
+            "| Castillo|              1|         11303|                      [Pamela]|\n",
+            "| Firrelli|              2|          9181|                 [Jeff, Julie]|\n",
+            "|   Vanauf|              1|         10563|                      [George]|\n",
+            "|      Yue|              1|          6660|                        [Foon]|\n",
+            "|Patterson|              3|          9998|          [Mary, Steve, Wil...|\n",
+            "| Thompson|              1|          5186|                      [Leslie]|\n",
+            "| Jennings|              1|          8113|                      [Leslie]|\n",
+            "|     Bott|              1|         11798|                       [Larry]|\n",
+            "|Hernandez|              1|          6949|                      [Gerard]|\n",
+            "+---------+---------------+--------------+------------------------------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "top_emp = (\n",
+        "    df.filter(col(\"rn\") == 1)\n",
+        "      .select(\n",
+        "          \"surname\",\n",
+        "          col(\"employee_name\").alias(\"employee_with_highest_salary\"),\n",
+        "          col(\"department\").alias(\"department_with_highest_salary\")\n",
+        "      )\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "c7YwQN-Xx4yG"
+      },
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = (\n",
+        "    agg.join(top_emp, \"surname\", \"left\")\n",
+        "       .select(\n",
+        "           \"surname\",\n",
+        "           \"count_employees\",\n",
+        "           \"highest_salary\",\n",
+        "           \"employee_with_highest_salary\",\n",
+        "           \"department_with_highest_salary\",\n",
+        "           \"array_with_all_the_first_names\"\n",
+        "       )\n",
+        ")\n",
+        "\n",
+        "result.show(truncate=False)"
+      ],
+      "metadata": {
+        "id": "-v-Fg9pLyOAS",
+        "outputId": "90fe14c5-4ec3-4285-d757-db8f5530eee8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---------+---------------+--------------+----------------------------+------------------------------+------------------------------+\n",
+            "|surname  |count_employees|highest_salary|employee_with_highest_salary|department_with_highest_salary|array_with_all_the_first_names|\n",
+            "+---------+---------------+--------------+----------------------------+------------------------------+------------------------------+\n",
+            "|Bow      |1              |6627          |Anthony Bow                 |Accounting                    |[Anthony]                     |\n",
+            "|Jones    |1              |10586         |Barry Jones                 |SCM                           |[Barry]                       |\n",
+            "|Bondur   |2              |11472         |Gerard Bondur               |Accounting                    |[Gerard, Loui]                |\n",
+            "|Murphy   |1              |8435          |Diane Murphy                |Accounting                    |[Diane]                       |\n",
+            "|Castillo |1              |11303         |Pamela Castillo             |SCM                           |[Pamela]                      |\n",
+            "|Firrelli |2              |9181          |Julie Firrelli              |Sales                         |[Jeff, Julie]                 |\n",
+            "|Vanauf   |1              |10563         |George Vanauf               |Sales                         |[George]                      |\n",
+            "|Yue      |1              |6660          |Foon Yue Tseng              |Sales                         |[Foon]                        |\n",
+            "|Patterson|3              |9998          |Mary Patterson              |Accounting                    |[Mary, Steve, William]        |\n",
+            "|Thompson |1              |5186          |Leslie Thompson             |IT                            |[Leslie]                      |\n",
+            "|Jennings |1              |8113          |Leslie Jennings             |IT                            |[Leslie]                      |\n",
+            "|Bott     |1              |11798         |Larry Bott                  |SCM                           |[Larry]                       |\n",
+            "|Hernandez|1              |6949          |Gerard Hernandez            |SCM                           |[Gerard]                      |\n",
+            "+---------+---------------+--------------+----------------------------+------------------------------+------------------------------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "OEkGevGPz5mA"
       },
       "execution_count": null,
       "outputs": []
