Criado através do Colab

--- a/spark/examples/07-udf.ipynb
+++ b/spark/examples/07-udf.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/lucprosa/dataeng-basic-course/blob/main/spark/examples/07-udf.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/tomassalcedas/dataeng/blob/main/spark/examples/07-udf.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -17,6 +17,30 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/lucprosa/dataeng-basic-course/blob/main/spark/examples/07-udf.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "gLXF45j_MIGa",
+        "outputId": "7d176231-186a-412e-c5c9-ff905ed86aeb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
       ]
     },
     {
@@ -51,18 +75,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "uYXeODL0T1fO"
+        "id": "uYXeODL0T1fO",
+        "outputId": "4383d50f-cb55-4294-a796-993a898c42da",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: pyspark in /usr/local/lib/python3.11/dist-packages (3.5.1)\n",
+            "Requirement already satisfied: py4j==0.10.9.7 in /usr/local/lib/python3.11/dist-packages (from pyspark) (0.10.9.7)\n"
+          ]
+        }
+      ],
       "source": [
         "%pip install pyspark"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "637HFw00T3LP"
       },
@@ -84,11 +121,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "cJW8fERxq5RC"
+        "id": "cJW8fERxq5RC",
+        "outputId": "ba827511-80ea-4687-8254-412371bbdd35",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----------+--------------+------------+\n",
+            "|slen(name)|to_upper(name)|add_one(age)|\n",
+            "+----------+--------------+------------+\n",
+            "|         8|      JOHN DOE|          22|\n",
+            "+----------+--------------+------------+\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# UDF examples\n",
         "\n",
@@ -113,7 +167,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "7Er_akN6suUy"
       },
@@ -135,13 +189,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
-        "id": "55CrjaQZs7Fm"
+        "id": "55CrjaQZs7Fm",
+        "outputId": "5a13d9ac-a024-4c13-f25f-970f3d33f098",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---+-----+----+---------------+\n",
+            "| id| name|dpto|additional_info|\n",
+            "+---+-----+----+---------------+\n",
+            "|101|Chloe|   3|          Chloe|\n",
+            "|102| Paul|   1|           Paul|\n",
+            "|103| John|   1|     John#FIRED|\n",
+            "|104| Lisa|   2|     Lisa#FIRED|\n",
+            "|105| Evan|   3|     Evan#FIRED|\n",
+            "|106|  Amy|   3|            Amy|\n",
+            "|107|Jimmy|   5|          Jimmy|\n",
+            "+---+-----+----+---------------+\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
-        "\n",
         "# Creating UDF to identify the employess that will be fired\n",
         "\n",
         "fired_employees = [\"John\", \"Lisa\", \"Evan\"]\n",
@@ -158,11 +234,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
-        "id": "yqYB0iRtyfi9"
+        "id": "yqYB0iRtyfi9",
+        "outputId": "0e536796-f532-41c8-dc44-dd839966fb38",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+------+\n",
+            "|length|\n",
+            "+------+\n",
+            "|    23|\n",
+            "+------+\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# Can be used in SQL\n",
         "\n",
