--- a/spark/examples/09-windows-function.ipynb
+++ b/spark/examples/09-windows-function.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/lucprosa/dataeng-basic-course/blob/main/spark/examples/09-windows-function.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/tomassalcedas/dataeng/blob/main/spark/examples/09-windows-function.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -32,18 +32,55 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "uYXeODL0T1fO"
+        "id": "uYXeODL0T1fO",
+        "outputId": "f289a91f-ec44-4d6d-d2e4-0293e4181287",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: pyspark in /usr/local/lib/python3.11/dist-packages (3.5.1)\n",
+            "Requirement already satisfied: py4j==0.10.9.7 in /usr/local/lib/python3.11/dist-packages (from pyspark) (0.10.9.7)\n"
+          ]
+        }
+      ],
       "source": [
         "%pip install pyspark"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "WBf-CZ-cmugR",
+        "outputId": "fc364f2e-bc5f-41bf-b55e-f9868b5e5aef",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
         "id": "637HFw00T3LP"
       },
@@ -64,11 +101,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "fZzWrJbROKE0"
+        "id": "fZzWrJbROKE0",
+        "outputId": "ec0aa13e-e7b3-4955-82a7-cecdc33cef2b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----+-----------+------+---+\n",
+            "| name|       dept|salary|age|\n",
+            "+-----+-----------+------+---+\n",
+            "| Lisa|      Sales| 10000| 35|\n",
+            "| Evan|      Sales| 32000| 38|\n",
+            "| Fred|Engineering| 21000| 28|\n",
+            "| Alex|      Sales| 30000| 33|\n",
+            "|  Tom|Engineering| 23000| 33|\n",
+            "| Jane|  Marketing| 29000| 28|\n",
+            "| Jeff|  Marketing| 35000| 38|\n",
+            "| Paul|Engineering| 29000| 23|\n",
+            "|Chloe|Engineering| 23000| 25|\n",
+            "+-----+-----------+------+---+\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# using inline table to prepare the data\n",
         "\n",
@@ -89,11 +151,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "o0JtIU70Pgoq"
+        "id": "o0JtIU70Pgoq",
+        "outputId": "aa3a9748-92d2-44ee-f3b5-3a69edb9b078",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----+-----------+------+----------+\n",
+            "| name|       dept|salary|dense_rank|\n",
+            "+-----+-----------+------+----------+\n",
+            "| Fred|Engineering| 21000|         1|\n",
+            "|  Tom|Engineering| 23000|         2|\n",
+            "|Chloe|Engineering| 23000|         2|\n",
+            "| Paul|Engineering| 29000|         3|\n",
+            "| Jane|  Marketing| 29000|         1|\n",
+            "| Jeff|  Marketing| 35000|         2|\n",
+            "| Lisa|      Sales| 10000|         1|\n",
+            "| Alex|      Sales| 30000|         2|\n",
+            "| Evan|      Sales| 32000|         3|\n",
+            "+-----+-----------+------+----------+\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# calculate dense_rank on salary\n",
         "qry1 = \"\"\"SELECT name, dept, salary, DENSE_RANK() OVER (PARTITION BY dept ORDER BY salary ROWS BETWEEN\n",
@@ -104,11 +191,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
-        "id": "mE58WtSzRsg9"
+        "id": "mE58WtSzRsg9",
+        "outputId": "b1ab0f57-12b6-4dce-af6f-e3adcb7c33ad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----+-----------+------+-----+\n",
+            "| name|       dept|salary|  min|\n",
+            "+-----+-----------+------+-----+\n",
+            "| Fred|Engineering| 21000|21000|\n",
+            "|  Tom|Engineering| 23000|21000|\n",
+            "|Chloe|Engineering| 23000|21000|\n",
+            "| Paul|Engineering| 29000|21000|\n",
+            "| Jane|  Marketing| 29000|29000|\n",
+            "| Jeff|  Marketing| 35000|29000|\n",
+            "| Lisa|      Sales| 10000|10000|\n",
+            "| Alex|      Sales| 30000|10000|\n",
+            "| Evan|      Sales| 32000|10000|\n",
+            "+-----+-----------+------+-----+\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# calculate min salary by dept\n",
         "qry2 = \"\"\"SELECT name, dept, salary, MIN(salary) OVER (PARTITION BY dept ORDER BY salary) AS min\n",
@@ -119,11 +231,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
-        "id": "FBohSBV4Sfkb"
+        "id": "FBohSBV4Sfkb",
+        "outputId": "8cd651ab-513f-4931-a797-ef7e16bf9976",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+-----+-----------+------+---+-----+\n",
+            "| name|       dept|salary|age|  min|\n",
+            "+-----+-----------+------+---+-----+\n",
+            "| Fred|Engineering| 21000| 28|21000|\n",
+            "|  Tom|Engineering| 23000| 33|21000|\n",
+            "|Chloe|Engineering| 23000| 25|21000|\n",
+            "| Paul|Engineering| 29000| 23|21000|\n",
+            "| Jane|  Marketing| 29000| 28|29000|\n",
+            "| Jeff|  Marketing| 35000| 38|29000|\n",
+            "| Lisa|      Sales| 10000| 35|10000|\n",
+            "| Alex|      Sales| 30000| 33|10000|\n",
+            "| Evan|      Sales| 32000| 38|10000|\n",
+            "+-----+-----------+------+---+-----+\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# same logic but using dataframes\n",
         "from pyspark.sql.functions import min\n",
